--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.19.0",
